<?xml version="1.0" encoding="utf-8"?><!--Scroll Layout for scrolling-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <!--Linear Layout for scrolling-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="16dp">

        <!--Add a student heading text-->
        <TextView
            android:id="@+id/headingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/heading_text"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <!--Empty field validation text-->
        <TextView
            android:id="@+id/addStudentValidationMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textColor="@color/error_validation_text_color"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/studentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/add_student_input_field_bg"
            android:hint="@string/add_student_name_field"
            android:padding="12dp"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/add_student_input_field_bg"
            android:hint="@string/add_student_id_field"
            android:padding="12dp"
            android:textSize="17sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/courseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/add_student_input_field_bg"
            android:hint="@string/add_student_course_field"
            android:padding="12dp"
            android:textSize="17sp"
            android:inputType="text" />

        <Button
            android:id="@+id/addStudentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_student_btn"
            android:textColor="@color/add_student_btn_text_color"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_btn_text"
            android:textColor="@color/add_student_btn_text_color"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>